--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -14,6 +14,8 @@ pydantic = "^2.4.2"
 jira = "^3.5.2"
 python-dotenv = "^1.0.0"
 httpx = "^0.25.1"
+python-multipart = "^0.0.20"
+aiofiles = "^24.1.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.0.0"
