Add Poetry dependency management commands and initial setup documentation; implement IssuesPage component with natural language query handling and JQL execution; fix missing 'uvicorn' module error in server log.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -5,9 +5,14 @@ JIRA_API_TOKEN=your-jira-api-token
 JIRA_PROJECT_KEY=YOUR_PROJECT
 
 # LLM Configuration
-LLM_MODEL_REPO=TheBloke/phi-2-GGUF
-LLM_MODEL_FILENAME=phi-2.Q5_K_S.gguf
-LLM_MODEL_PATH=./models/phi-2.Q5_K_S.gguf
+#LLM_MODEL_REPO=TheBloke/phi-2-GGUF
+#LLM_MODEL_FILENAME=phi-2.Q5_K_S.gguf
+#LLM_MODEL_PATH=./models/phi-2.Q5_K_S.gguf
+
+LLM_MODEL_REPO=TheBloke/Mistral-7B-Instruct-v0.2-GGUF
+LLM_MODEL_FILENAME=mistral-7b-instruct-v0.2.Q4_K_M.gguf
+LLM_MODEL_PATH=./models/mistral-7b-instruct-v0.2.Q4_K_M.gguf
+
 LLM_CONTEXT_SIZE=4096
 LLM_MAX_TOKENS=512
 LLM_TEMPERATURE=0.7
