--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -20,6 +20,10 @@ aiofiles = "^24.1.0"
 llama-cpp-python = "^0.3.9"
 numpy = "^2.2.6"
 huggingface-hub = "^0.32.3"
+# Additional dependencies for enhanced JQL processing
+python-dateutil = "^2.8.2"
+fuzzywuzzy = "^0.18.0"
+python-levenshtein = "^0.23.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.0.0"
